--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,10 @@ dependencies {
 
     compileOnly("org.springframework.boot:spring-boot-devtools")
     testCompile("org.springframework.boot:spring-boot-starter-test")
-    testCompile("junit:junit")
+    testCompile('org.junit.jupiter:junit-jupiter-api:5.2.0')
+    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.2.0')
+    testCompile("org.mockito:mockito-core:2.19.0")
+    testCompile("com.h2database:h2:1.4.197")
 
     compile("io.springfox:springfox-swagger2:2.9.2")
     compile("io.springfox:springfox-swagger-ui:2.9.2")
